# CS6170-Final-Project

./: CMakeLists.txt  README.md
ext/: CMakeLists.txt
ext/glad/: CMakeLists.txt
ext/glad/include/glad/: glad.h
ext/glad/src/: glad.c
src/: main.cpp  parallel_peak_prune.cu  parallel_peak_prune.h  utility.hpp
